--- a/LibraryJava2/src/application/SearchResult.fxml
+++ b/LibraryJava2/src/application/SearchResult.fxml
@@ -9,6 +9,9 @@
    <children>
       <TableView fx:id="table" layoutX="44.0" layoutY="73.0" prefHeight="482.0" prefWidth="717.0">
       <Text fx:id="titleText" />
+      <Text fx:id="authorText" />
+      <Text fx:id="countryText" />
+      <Text fx:id="subjectText" />
         <columns>
           <TableColumn fx:id="columnTitle" prefWidth="256.00006103515625" text="Titel" />
           <TableColumn fx:id="columnAuthor" prefWidth="179.99993896484375" text="Författare" />
